# messaging-app

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: App.css  App.js  Chat.js  Login.js  Register.js  config.js  index.js
server/: CMakeLists.txt  setup.bat  setup.sh  start.sh  vcpkg.json
server/src/: CMakeLists.txt  authentication.cpp  authentication.h  chat.cpp  chat.h  http_session.cpp  http_session.h  main.cpp  simple_json.h
